--- a/Pagine/ArticoliScuola/Javascript.html
+++ b/Pagine/ArticoliScuola/Javascript.html
@@ -1,45 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> JavaScript </title>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="../../css/style.css">
-        <script src="../../JS/script.js"></script>
-        <link rel="stylesheet" href="../../css/articolojava.css">
-    </head>
-    <body>
-        <!-- BARRA DI SOPRA-->
-    <div id="barraSopra">
-        <a href="../ChiSono.html">
-        <div class="pulsante">
-            <h1>Chi sono</h1>
-        </div>
-        </a>
 
-        <a href="../MenuArticoli.html"> 
-        <div class="pulsante"> 
-            <h1>Articoli</h1>
-        </div>
-        </a>
+<head>
+    <title> JavaScript </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="../../css/style.css">
+    <script src="../../JS/script.js"></script>
+    <link rel="stylesheet" href="../../css/articolojava.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</head>
 
-        <a href="../../index.html">
-        <img src="../../Immagini/home.png" id="immagine"> 
-        </a>
+<body style="background-color: #F9FBF2;">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
+        <div class="container-fluid">
+
+            <a class="navbar-brand" href="#">
+                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top">
+                Gabriel Ricaldone
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Info.html">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Sistemi.html">Sistemi</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+    <!--Barra di sopra-->
+
+    <!--BARRA DI SOPRA-->
+    <div class="casellaTesto">
+        <h1>JavaScript!</h1>
+        <p>Qua ci saranno 5 pulsanti!</p>
+        <p id="tabellina">Le tabelline usciranno qui!</p>
+        <button id="button1" onclick="tabellina1()">click</button>
+        <button id="button2" onclick="tabellina2()">click</button>
+        <button id="button3" onclick="tabellina3()">click</button>
+        <button id="button4" onclick="tabellina4()">click</button>
+        <button id="button5" onclick="tabellina5()">click</button>
     </div>
-        <!--BARRA DI SOPRA-->
-        <div class="casellaTesto">
-            <h1>JavaScript!</h1>
-            <p>Qua ci saranno 5 pulsanti!</p> 
-            <p id="tabellina">Le tabelline usciranno qui!</p>
-            <button id="button1" onclick="tabellina1()">click</button>
-            <button id="button2" onclick="tabellina2()">click</button>
-            <button id="button3" onclick="tabellina3()">click</button>
-            <button id="button4" onclick="tabellina4()">click</button>
-            <button id="button5" onclick="tabellina5()">click</button>
+    <!--Barra sotto-->
+    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
+        <div class="container-fluid">
         </div>
-        <!--Barra sotto-->
-        <div id="barraSotto">
-        </div>
-    </body>
+    </nav>
+</body>
+
 </html>
