--- a/Pagine/ArticoliScuola/Javascript3.html
+++ b/Pagine/ArticoliScuola/Javascript3.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> JavaScript </title>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="../../css/style.css">
-        <script src="../../JS/script3.js"></script>
-        <link rel="stylesheet" href="../../css/articolojava3.css">
-    </head>
-    <body>
-        <!-- BARRA DI SOPRA-->
+
+<head>
+    <title> JavaScript </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="../../css/style.css">
+    <script src="../../JS/script3.js"></script>
+    <link rel="stylesheet" href="../../css/articolojava3.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <!-- BARRA DI SOPRA-->
     <div id="barraSopra">
         <a href="../ChiSono.html">
-        <div class="pulsante">
-            <h1>Chi sono</h1>
-        </div>
+            <div class="pulsante">
+                <h1>Chi sono</h1>
+            </div>
         </a>
 
-        <a href="../MenuArticoli.html"> 
-        <div class="pulsante"> 
-            <h1>Articoli</h1>
-        </div>
+        <a href="../MenuArticoli.html">
+            <div class="pulsante">
+                <h1>Articoli</h1>
+            </div>
         </a>
 
         <a href="../../index.html">
-        <img src="../../Immagini/home.png" id="immagine"> 
+            <img src="../../Immagini/home.png" id="immagine">
         </a>
     </div>
-        <!--BARRA DI SOPRA-->
-        <div class="casellaTesto">
-            <h1>Moltiplicazione tra A e B </h1>
-            <form id="frm1" >
-             A: <input type="text" name="Hbase" value="1"><br>
-             B: <input type="text" name="HArrivo" value="1"><br>
-             C: <input type="text" name="HBase1" value="1"><br><br>
-             <!-- <input type="submit" value="Input dati Trekking">-->
-            </form>
-            
-            <p>Calcola:</p>
-            <button onclick="myFunction()">Calcola</button>
-            
-            <p>A:</p>
-            <p id="base"></p>
-            <p>B:</p>
-            <p id="arrivo"></p>
-            <p>C:</p>
-            <p id="base1"></p>
-            <hr>
-            La Moltiplicazione è:
-            <p id="demo"></p>
-            Il numero max è:
-            <p id="demo1"></p>
-        </div>
-        <!--Barra sotto-->
-        <div id="barraSotto">
-        </div>
-    </body>
+    <!--BARRA DI SOPRA-->
+    <div class="casellaTesto">
+        <h1>Moltiplicazione tra A e B </h1>
+        <form id="frm1">
+            A: <input type="text" name="Hbase" value="1"><br>
+            B: <input type="text" name="HArrivo" value="1"><br>
+            C: <input type="text" name="HBase1" value="1"><br><br>
+            <!-- <input type="submit" value="Input dati Trekking">-->
+        </form>
+
+        <p>Calcola:</p>
+        <button onclick="myFunction()">Calcola</button>
+
+        <p>A:</p>
+        <p id="base"></p>
+        <p>B:</p>
+        <p id="arrivo"></p>
+        <p>C:</p>
+        <p id="base1"></p>
+        <hr>
+        La Moltiplicazione è:
+        <p id="demo"></p>
+        Il numero max è:
+        <p id="demo1"></p>
+    </div>
+    <!--Barra sotto-->
+    <div id="barraSotto">
+    </div>
+</body>
 </html2
