--- a/Pagine/ArticoliScuola/Javascript5.html
+++ b/Pagine/ArticoliScuola/Javascript5.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>JavaScript</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="../../css/style.css" />
-    <script src="../../JS/script5.js"></script>
-    <link rel="stylesheet" href="../../css/articolojava4.css" />
-  </head>
 
-  <body>
-    <!-- BARRA DI SOPRA-->
-    <div id="barraSopra">
-      <a href="../ChiSono.html">
-        <div class="pulsante">
-          <h1>Chi sono</h1>
-        </div>
-      </a>
+<head>
+  <title>JavaScript</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" href="../../css/style.css" />
+  <script src="../../JS/script5.js"></script>
+  <link rel="stylesheet" href="../../css/articolojava4.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</head>
 
-      <a href="../MenuArticoli.html">
-        <div class="pulsante">
-          <h1>Articoli</h1>
-        </div>
-      </a>
+<body>
+  <!-- BARRA DI SOPRA-->
+  <div id="barraSopra">
+    <a href="../ChiSono.html">
+      <div class="pulsante">
+        <h1>Chi sono</h1>
+      </div>
+    </a>
 
-      <a href="../../index.html">
-        <img src="../../Immagini/home.png" id="immagine" />
-      </a>
-    </div>
-    <!--BARRA DI SOPRA-->
-    <div class="casellaTesto">
-      <p id="output"></p>
-    </div>
-  </body>
+    <a href="../MenuArticoli.html">
+      <div class="pulsante">
+        <h1>Articoli</h1>
+      </div>
+    </a>
+
+    <a href="../../index.html">
+      <img src="../../Immagini/home.png" id="immagine" />
+    </a>
+  </div>
+  <!--BARRA DI SOPRA-->
+  <div class="casellaTesto">
+    <p id="output"></p>
+  </div>
+</body>
+
 </html>
