--- a/Pagine/ArticoliScuola/SistemiOperativi.html
+++ b/Pagine/ArticoliScuola/SistemiOperativi.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Linux </title>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="../../css/style.css">
-    </head>
-    <body>
-        <!-- BARRA DI SOPRA-->
+
+<head>
+    <title> Linux </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="../../css/style.css">
+</head>
+
+<body>
+    <!-- BARRA DI SOPRA-->
     <div id="barraSopra">
         <a href="../ChiSono.html">
-        <div class="pulsante">
-            <h1>Chi sono</h1>
-        </div>
+            <div class="pulsante">
+                <h1>Chi sono</h1>
+            </div>
         </a>
 
-        <a href="../MenuArticoli.html"> 
-        <div class="pulsante"> 
-            <h1>Articoli</h1>
-        </div>
+        <a href="../MenuArticoli.html">
+            <div class="pulsante">
+                <h1>Articoli</h1>
+            </div>
         </a>
 
         <a href="../../index.html">
-        <img src="../../Immagini/home.png" id="immagine"> 
+            <img src="../../Immagini/home.png" id="immagine">
         </a>
     </div>
-        <!--BARRA DI SOPRA-->
-    </body>
+    <!--BARRA DI SOPRA-->
+</body>
+
 </html>
