--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -17,18 +17,16 @@
 <body style="background-color: #F9FBF2;">
     <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
         <div class="container-fluid">
-
             <a class="navbar-brand" href="#">
-                <img src="Immagini/LogoEpico.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top">
                 Gabriel Ricaldone
             </a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -45,18 +43,11 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
-    <!--Barra di sopra-->
 
     <div class="container my-5 text-center" style="max-width:580px;">
-        <h1>Eserciziario</h1>
-        <p class="lead">Qua ci saranno tutti gli ES</p>
-        <div class="btn-group" role="group" aria-label="Basic example">
-            <a href="https://github.com/Ricaldone-Gabriel/SitoAltervista" class="btn btn-outline-primary">Github</a>
-            <button type="button" onclick="copia()" class="btn btn-outline-primary">Email </button>
-        </div>
+        <h1>TIPSIT</h1>
     </div>
 
     <div class="container text-center">
@@ -67,7 +58,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Info</h5>
                         <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà informatica.</p>
-                        <a href="Info.html" class="btn btn-primary">Informati!</a>
+                        <a href="#" class="btn btn-primary">Informati!</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +68,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sistemi</h5>
                         <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà Assembly.</p>
-                        <a href="Sistemi.html" class="btn btn-primary">Sistemati!</a>
+                        <a href="#" class="btn btn-primary">Sistemati!</a>
                     </div>
                 </div>
             </div>
@@ -87,14 +78,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Tipsit</h5>
                         <p class="card-text">Qua ci sono degli esercizi! <br> Qua ci sarà HTML e JS.</p>
-                        <a href="TIPSIT.html" class="btn btn-primary">Si!</a>
+                        <a href="#" class="btn btn-primary">Si!</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--Barra di sotto-->
     <nav class="navbar fixed-bottom navbar-dark" style="background-color: #0E1C36">
         <div class="container-fluid">
         </div>
